--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/flashcash
 spring.datasource.username=root
 spring.datasource.password=
 
-server.servlet.context-path=/flashcash
+#server.servlet.context-path=/flashcash
